--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
         <canvas id="lineChart"></canvas>
       </div>
   
-
-      <script src="js/bar-chart.js"></script>
-      <script src="js/pie-chart.js"></script>
-      <script src="js/line-chart.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
