target line chart with c3 d3 main file

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/c3.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="js/c3.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Customized Chatjs</title>
 </head>
 <body>
+    <div class="container">
+        <div id="targetLineChart"></div>
+    </div>
+
     <div class="container">
         <canvas id="barChart"></canvas>
     </div>
